# Ivory

./: .gitignore  2  CMakeLists.txt  README.md  compile_commands.json
Assets/Icons/: Load.conf
Include/: AssetManager.hpp  Colors.hpp  Compartment.hpp  Container.hpp  Game.hpp  GameConfig.hpp  GameStaticSettings.hpp  Item.hpp  ItemConfig.hpp  ItemLoader.hpp
Include/Ui/: Clickable.hpp  EventHandler.hpp
Source/: AssetManager.cpp  CMakeLists.txt  Compartment.cpp  Container.cpp  Game.cpp  GameConfig.cpp  Item.cpp  ItemConfig.cpp  ItemLoader.cpp  Main.cpp
